--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -5,7 +5,7 @@
 !color2 = #2098E5
 !color3 = #E1F3FD
 !color4 = #2D7BB2
-
+!color5 = #AFD1E5
 =rounded(!radius)
   -moz-border-radius = !radius
   -webkit-border-radius = !radius
