--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -914,52 +914,44 @@ td.title {
   bottom: 0;
   right: 15px; }
 
-.dashboard_table {
-  border-top: 10px solid #E5F3FC; }
-
 body.dashboards .content, body.buying .content, body.selling .content {
   margin: 0; }
 
 .dashboard_top {
-  border-top: 10px solid #E5F3FC;
   clear: both;
-  padding: 25px 25px 18px 25px; }
+  padding: 25px 25px 18px 15px; }
 
 .dashboard_links {
   position: relative;
   float: left;
   width: 100%;
-  border-bottom: 1px solid #999999; }
+  background: #e1f3fd;
+  padding: 10px 0; }
   .dashboard_links a {
-    padding: 4px 0;
-    margin-top: 1px;
-    border: 1px solid #CCCCCC;
-    border-bottom: 0;
+    padding: 4px 15px;
+    margin: 0 4px 0 0;
     display: block;
-    color: #999999;
+    color: #afd1e5;
     float: left;
-    background-color: #F6F6F6;
-    width: 110px;
+    width: auto;
     margin-right: 10px;
-    text-align: center; }
+    text-align: center;
+    font-size: 18px; }
+    .dashboard_links a:hover {
+      color: #2d7bb2; }
     .dashboard_links a span {
-      font-size: 11px;
+      font-size: 10px;
       padding: 0 4px;
-      margin-left: 4px;
-      color: #018AE1;
+      margin: 0 0 0 4px;
       background: #FFFFFF;
-      border: 1px solid #CCCCCC; }
+      color: #ff3300;
+      font-weight: bold;
+      vertical-align: middle; }
 
-a.first_tab_heading {
-  margin-left: 20px; }
 
 a.active_tab_heading {
   position: relative;
-  margin-top: 0;
-  padding-bottom: 5px;
-  top: 1px;
-  background-color: #E5F3FC;
-  color: #333333;
+  color: #2d7bb2;
   border-color: #999999; }
 
 .offer_date {
