minor revisions to homepage and other views

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -8,7 +8,7 @@
     /= link_to 'Cancel', root_path
 
 #register_intro
-  %h2 Important
+  %h2 Please Note
   %p 
     Suprmarket is a private marketplace. You must have an account to post listings and communicate with sellers. We are currently accepting new users who meet one of the following criteria:
     %ol
