--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -40,7 +40,7 @@ table {
 body {
   background-color: #EEE;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  min-width: 980px; }
+  min-width: 990px; }
 
 body, p, div, h4 {
   margin: 0;
@@ -115,7 +115,7 @@ body.searches .content {
   background-color: #fff; }
   .text_field input:focus, .text_field textarea:focus, #search input:focus, #search textarea:focus, #search_small input:focus, #search_small textarea:focus, .search_filters input:focus, .search_filters textarea:focus, .password_field input:focus, .password_field textarea:focus, .text_area input:focus, .text_area textarea:focus {
     background-color: #FFD;
-    color: #333333; }
+    color: #292929; }
 .text_field input, #search input, #search_small input, .search_filters input, .password_field input, .text_area input {
   height: 22px; }
 
@@ -126,13 +126,18 @@ a {
   a img {
     border: 0; }
   a:hover {
-    color: #333333; }
+    color: #292929; }
 
 .container {
   float: left;
   width: 100%;
   background-color: #FFF;
   min-height: 500px; }
+
+.home .header {
+  background-color: #fff; }
+  .home .header .login a, .home .header .logged_out a {
+    color: #2d7bb2; }
 
 .header {
   text-align: right;
@@ -293,7 +298,6 @@ label {
     margin-left: -5px;
     width: 58px;
     padding: 3px 5px;
-    font-weight: normal;
     border-left-color: #000; }
   #search_small #categories {
     background: #fff;
@@ -333,8 +337,7 @@ label {
     font-size: 20px;
     margin-left: -5px;
     width: 90px;
-    padding: 6px 10px;
-    font-weight: normal; }
+    padding: 6px 10px; }
   #search #categories {
     background: #fff;
     line-height: 1.2;
@@ -365,12 +368,12 @@ label {
 
 .logo {
   width: 215px;
-  height: 42px;
+  height: 80px;
   overflow: hidden;
   float: left;
   margin-left: 115px;
   font-size: 36px;
-  color: #333333;
+  color: #292929;
   font-weight: bold;
   letter-spacing: -1px; }
 
@@ -387,9 +390,9 @@ label {
 
 .tagline {
   float: left;
-  color: #bbb;
+  color: #292929;
   line-height: 56px;
-  font-size: 12px;
+  font-size: 11px;
   letter-spacing: 1px; }
 
 #search_details {
@@ -463,7 +466,7 @@ span.button {
 .description {
   padding-top: 10px;
   font-size: 14px;
-  color: #333333;
+  color: #292929;
   clear: both;
   line-height: 1.3; }
 
@@ -488,13 +491,13 @@ td.price {
 
 .active_tab {
   background-color: #fff;
-  color: #333333;
+  color: #292929;
   z-index: 2; }
 
 .tab {
   z-index: 1;
   position: relative;
-  padding: 20px 0;
+  padding: 7px 0 20px;
   background-color: #fff;
   width: 355px;
   clear: both;
@@ -546,7 +549,7 @@ td.price {
     padding: 0;
     background-color: #fff;
     font-size: 20px;
-    color: #333333;
+    color: #292929;
     margin: 0 0 5px 0;
     font-weight: bold; }
   .listing_details h3 {
@@ -778,7 +781,7 @@ td {
   border-bottom: 1px solid #eee;
   font-size: 12px; }
   td a {
-    color: #333333; }
+    color: #292929; }
     td a:hover {
       color: #aaa; }
 
