Dashboards. Categories Page

--- a/app/views/feedback/show.html.haml
+++ b/app/views/feedback/show.html.haml
@@ -1,3 +1,5 @@
+= render 'dashboards/navigation'
+
 .dashboard_top
   = link_to 'Feedback Left', :filter => 'left'
   = link_to 'Feedback Received', :filter => 'received'
