--- a/public/stylesheets/sass/dashboard.sass
+++ b/public/stylesheets/sass/dashboard.sass
@@ -1,4 +1,4 @@
-body.dashboards, body.buying, body.selling
+body.dashboards, body.buying, body.selling, body.feedback, body.preferences
   .content
     :margin 0
 
