--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -813,9 +813,10 @@ td.title {
       font-size: 11px;
       position: absolute;
       bottom: 3px;
-      left: 1px;
-      width: 99%;
+      left: 0;
+      width: 100%;
       padding: 2px 0 6px;
+      text-indent: 10px;
       background: #333;
       color: #fff;
       font-weight: bold;
