Use large image display for grid

--- a/app/views/listings/_grid.html.haml
+++ b/app/views/listings/_grid.html.haml
@@ -5,7 +5,7 @@
       .grid_result
         .image
           - if result.photos_count > 0
-            = link_to(image_tag(result.photos.first.file.url(params[:large] ? :display : :thumb), :alt => h(result.title)), result)
+            = link_to(image_tag(result.photos.first.file.url(params[:large] ? :large : :thumb), :alt => h(result.title)), result)
           - else
             = link_to(image_tag('/images/no_photo.png', :alt => 'No Photo'), result)
           = link_to result.title, result, :class => 'title'
