Favorites icon lights up. Refs #10

--- a/app/views/users/_bar.html.haml
+++ b/app/views/users/_bar.html.haml
@@ -49,6 +49,6 @@
       = link_to t(:sign_out), sign_out_path
     = activity_link_to
     0
-    = link_to image_tag('favorite.png'), favorites_path
+    = favorites_link_to
     = current_user.favorites_count
 
