--- a/public/stylesheets/sass/dashboard.sass
+++ b/public/stylesheets/sass/dashboard.sass
@@ -26,12 +26,12 @@ body.dashboards, body.buying, body.selling, body.feedback, body.preferences
       color = !color4
     span
       :font-size 10px
-      :padding 0 4px 
-      :margin 0 0 0 4px
+      :padding 1px 4px 
+      :margin 0 0 0 5px
       :background #FFFFFF
       :color #ff3300
       :font-weight bold
-      :vertical-align middle
+      :vertical-align text-top
 
 a.first_tab_heading
 a.active_tab_heading
