--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,6 +1,6 @@
 /*
 Sass::SyntaxError: Undefined variable: "!color3".
-on line 13 of /Users/halogenandtoast/projects/toastyapps/market/public/stylesheets/sass/dashboard.sass
+on line 13 of /Users/ben/projects/market/public/stylesheets/sass/dashboard.sass
 
 9: .dashboard_links
 10:   :position relative
@@ -16,81 +16,69 @@ on line 13 of /Users/halogenandtoast/projects/toastyapps/market/public/styleshee
 
 
 Backtrace:
-/Users/halogenandtoast/projects/toastyapps/market/public/stylesheets/sass/dashboard.sass:13
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/script/variable.rb:27:in `perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/prop_node.rb:87:in `perform!'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:179:in `_perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:156:in `perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:200:in `perform_children'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:200:in `map'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:200:in `perform_children'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:191:in `perform!'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/rule_node.rb:156:in `perform!'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:179:in `_perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:156:in `perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:200:in `perform_children'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:200:in `map'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:200:in `perform_children'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:191:in `perform!'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:179:in `_perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:156:in `perform'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/tree/node.rb:103:in `render'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin.rb:83:in `update_stylesheet'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin.rb:69:in `update_stylesheets'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin.rb:64:in `each'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin.rb:64:in `update_stylesheets'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin.rb:62:in `each'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin.rb:62:in `update_stylesheets'
-/Users/halogenandtoast/projects/toastyapps/market/vendor/gems/haml-2.2.2/rails/../lib/sass/plugin/rails.rb:16:in `process'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/base.rb:391:in `process'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/base.rb:386:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/routing/route_set.rb:437:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:87:in `dispatch'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:121:in `_call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:130:in `build_middleware_stack'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:29:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:29:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/activerecord-2.3.5/lib/active_record/connection_adapters/abstract/query_cache.rb:34:in `cache'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:9:in `cache'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:28:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/activerecord-2.3.5/lib/active_record/connection_adapters/abstract/connection_pool.rb:361:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/string_coercion.rb:25:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/head.rb:9:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/methodoverride.rb:24:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/params_parser.rb:15:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/session/cookie_store.rb:93:in `call'
-/Users/halogenandtoast/projects/toastyapps/market/app/middleware/flash_session_cookie_middleware.rb:14:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/failsafe.rb:26:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/lock.rb:11:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/lock.rb:11:in `synchronize'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/lock.rb:11:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:114:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/reloader.rb:34:in `run'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:108:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rails-2.3.5/lib/rails/rack/static.rb:31:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/urlmap.rb:46:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/urlmap.rb:40:in `each'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/urlmap.rb:40:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rails-2.3.5/lib/rails/rack/log_tailer.rb:17:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/content_length.rb:13:in `call'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/handler/webrick.rb:50:in `service'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:162:in `start'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:95:in `start'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:92:in `each'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:92:in `start'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:23:in `start'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/1.8/webrick/server.rb:82:in `start'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rack-1.0.1/lib/rack/handler/webrick.rb:14:in `run'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/gems/1.8/gems/rails-2.3.5/lib/commands/server.rb:111
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:31:in `gem_original_require'
-/usr/local/Cellar/ruby/1.8.7-p174/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:31:in `require'
-script/server:3
+/Users/ben/projects/market/public/stylesheets/sass/dashboard.sass:13
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/script/variable.rb:27:in `perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/prop_node.rb:87:in `perform!'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:179:in `_perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:156:in `perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:200:in `block in perform_children'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:200:in `map'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:200:in `perform_children'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:191:in `perform!'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/rule_node.rb:156:in `perform!'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:179:in `_perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:156:in `perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:200:in `block in perform_children'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:200:in `map'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:200:in `perform_children'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:191:in `perform!'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:179:in `_perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:156:in `perform'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/tree/node.rb:103:in `render'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin.rb:83:in `update_stylesheet'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin.rb:69:in `block (2 levels) in update_stylesheets'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin.rb:64:in `each'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin.rb:64:in `block in update_stylesheets'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin.rb:62:in `each'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin.rb:62:in `update_stylesheets'
+/Users/ben/projects/market/vendor/gems/haml-2.2.2/lib/sass/plugin/rails.rb:16:in `process'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/base.rb:391:in `process'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/base.rb:386:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/routing/route_set.rb:437:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:87:in `dispatch'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:121:in `_call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:130:in `block in build_middleware_stack'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:29:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:29:in `block in call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/activerecord-2.3.5/lib/active_record/connection_adapters/abstract/query_cache.rb:34:in `cache'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:9:in `cache'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/activerecord-2.3.5/lib/active_record/query_cache.rb:28:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/activerecord-2.3.5/lib/active_record/connection_adapters/abstract/connection_pool.rb:361:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/string_coercion.rb:25:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/head.rb:9:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/methodoverride.rb:24:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/params_parser.rb:15:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/session/cookie_store.rb:93:in `call'
+/Users/ben/projects/market/app/middleware/flash_session_cookie_middleware.rb:14:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/failsafe.rb:26:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/lock.rb:11:in `block in call'
+<internal:prelude>:8:in `synchronize'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/lock.rb:11:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:114:in `block in call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/reloader.rb:34:in `run'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/actionpack-2.3.5/lib/action_controller/dispatcher.rb:108:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rails-2.3.5/lib/rails/rack/static.rb:31:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/urlmap.rb:46:in `block in call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/urlmap.rb:40:in `each'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/urlmap.rb:40:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rails-2.3.5/lib/rails/rack/log_tailer.rb:17:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/content_length.rb:13:in `call'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/gems/1.9.1/gems/rack-1.0.1/lib/rack/handler/webrick.rb:50:in `service'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/1.9.1/webrick/httpserver.rb:111:in `service'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/1.9.1/webrick/httpserver.rb:70:in `run'
+/usr/local/Cellar/ruby/1.9.1-p378/lib/ruby/1.9.1/webrick/server.rb:183:in `block in start_thread'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Sass::SyntaxError: Undefined variable: \"!color3\".\A on line 13 of /Users/halogenandtoast/projects/toastyapps/market/public/stylesheets/sass/dashboard.sass\A \A 9: .dashboard_links\A 10:   :position relative\A 11:   :float left\A 12:   :width 100%\A 13:   background = !color3\A 14:   :padding 10px 0\A 15:   a\A 16:     :padding 4px 15px\A 17:     :margin 0 4px 0 0\A 18:     :display block\A 19:     color = !color5\A "; }
+  content: "Sass::SyntaxError: Undefined variable: \"!color3\".\A on line 13 of /Users/ben/projects/market/public/stylesheets/sass/dashboard.sass\A \A 9: .dashboard_links\A 10:   :position relative\A 11:   :float left\A 12:   :width 100%\A 13:   background = !color3\A 14:   :padding 10px 0\A 15:   a\A 16:     :padding 4px 15px\A 17:     :margin 0 4px 0 0\A 18:     :display block\A 19:     color = !color5\A "; }
