--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -92,7 +92,7 @@ a
   img
     :border 0
   &:hover
-    color = !color1
+    color = !color2
 .container
   :float left
   :width 100%
@@ -251,7 +251,7 @@ label
       :background-color #444
       :color #fff
     &.blur  
-      :color #666
+      :color #555
   #q
     :font-size 15px
     :margin 0
@@ -270,13 +270,14 @@ label
     :position absolute
     :left 100%
     :margin-left 5px
-    :top 0px
-    :height 500px
-    :border-left 1px solid #EEE
-    :padding-left 20px
+    :top -5px
+    :height 530px
+    :padding 10px 
     :text-align left
     :font-size 11px
     :z-index 100
+    :width 80px
+    :border 1px solid #ddd
     ul
       :list-style-type none
       :margin 0
@@ -286,6 +287,8 @@ label
         :padding 0
         a
           color = !color4
+          &:hover
+            color = !color2
 #search
   :clear both
   :padding-top 5px
@@ -419,7 +422,7 @@ span.button
   :display block
   :background-color #fff
   color = !color4
-  :margin 10px 20px 0 0
+  :margin 10px 30px 0 0
   :padding-bottom 10px
   :float left
   :font-size 12px
@@ -429,10 +432,18 @@ span.button
   :font-size 14px
   color = !color1
   :clear both
-  :line-height 1.3
+  :line-height 1.4
 div.price, span.price
   :color #54AE00
   :font-weight bold
+  sup
+    :font-weight normal
+    :font-size .7em
+    :margin 0 .1em 0 0
+    :position relative
+    :top -.25em
+    :vertical-align inherit
+    :color #87C64C
 div.price
   :font-size 20px
 td.price
@@ -443,7 +454,7 @@ td.price
 
 .flag
   :background-image url('/images/flag.png')
-  :background-position 0px 1px 
+  :background-position 0px 2px 
   :background-repeat no-repeat
   :padding-left 15px
 .active_tab
@@ -492,16 +503,27 @@ td.price
       :height 120px
 .seller_details
   :clear both
-  :font-size 11px
+  :font-size 12px
   :margin 5px 0
+  span.ratings_count
+    color = !color1
+    :font-weight bold
+  span.rating
+    :color #aaa
+    :font-size 10px
 .listing_details
-  :width 355px
+  :width 360px
   div.price
     :float left
+    :margin 0 0 10px
   div.location  
-    :float right
+    :float left
     :font-size 12px
     :color #ccc
+    :width 100%
+    :margin 0 0 5px
+    span.distance
+      :display inline
   h1
     :padding 0
     :background-color #fff
@@ -530,6 +552,9 @@ table
     :text-align left
     :border-top 1px solid #ccc
     :border-bottom 1px solid #ccc
+    tr 
+      &:hover
+        :background-color #f6f6f6
   th, td
     :padding 5px
     :vertical-align middle  
@@ -596,7 +621,7 @@ span.user
   .other_filters
     :margin-left 80px
     :float left
-    :width 520px
+    :width 430px
   .search_views
     :position absolute
     :left 15px
@@ -606,7 +631,7 @@ span.user
         :opacity .7
   label
     :display block
-    :padding-right 10px
+    :padding-right 20px
     color = !color4
     :font-size 11px
     :float left
@@ -694,7 +719,7 @@ span.user
     :padding 0
     :margin -1px 0 2px 0
 tr.selected
-  :background-color #F6F6F6
+  :background-color #fcfcfc
 td.fixed, th.fixed
   :width 50px
   :padding-left 15px
@@ -734,9 +759,10 @@ td
     color = !color1
     &:hover
       :color #aaa
+    &:visited
+      :color #663399      
 td.title
   :font-size 15px
-  :font-weight bold
   :min-width 540px
 .list_view_icon
   :margin-left -1px
