--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -777,22 +777,19 @@ td.title
     :float left
     :margin-left 15px
     :margin-bottom 15px
-    img
-      :border 1px solid #333
     .image
       :position relative
       :float left
     .title
       :font-size 11px
       :position absolute
-      :bottom 3px
+      :bottom 2px
       :left 0
       :width 100%
-      :padding 2px 0 6px
-      :text-indent 10px
-      :background #333
+      :text-align center
+      :padding 2px 0 4px
+      background-color = !color1
       :color #fff
-      :font-weight bold
       :line-height 1.15
       :display none
     .location
