--- a/app/views/listings/_form.html.haml
+++ b/app/views/listings/_form.html.haml
@@ -1,13 +1,12 @@
 = form.error_messages
-.form_left
+#listing_form
   .text_field
     = form.label :title, 'Title <span>(limited to 65 characters)'
     = form.text_field :title, :maxlength => 65
   .text_area
     = form.label :description
     = form.text_area :description
-.form_right
-  .text_field
+  .text_field.price
     = form.label :price
     = form.text_field :price, :class => 'price'
   .select
@@ -16,11 +15,11 @@
   .radio_button
     %fieldset 
       %legend Condition
+      = form.radio_button :condition, 'used'
+      = form.label :condition_used, 'Used'      
       = form.radio_button :condition, 'new'
       = form.label :condition_new, 'New'
-      = form.radio_button :condition, 'used'
-      = form.label :condition_used, 'Used'
-  .text_area
+  .text_field.zip
     = form.label :zip_code
     = form.text_field :zip_code, :value => current_user.zip_code
   #shipping.radio_button
@@ -33,11 +32,15 @@
       .will_ship
         = form.label :shipping_cost, t(:how_much)
         = form.text_field :shipping_cost
-  %label Images
-  .attachment_container
   #images
+    %label Images
+    .attachment_container
     - form.fields_for(:photos) do |photos_form|
       .file_field
         = photos_form.file_field :file
     
   %span#spanButtonPlaceholder.attachment_button
+  
+  .submit
+    %button.btn_lg Submit
+    = link_to 'cancel', root_path
