--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -28,7 +28,7 @@ h1
   :width 100%
   :height auto
   :float left
-  :font-size 22px
+  :font-size 20px
   :font-weight normal
   :padding 13px 0 13px 15px
   :margin 0 0 0 -15px
@@ -46,7 +46,6 @@ button
     :cursor pointer
   &:active
     :background #ddd 
-    :outline none
 .btn_lg
   :height 36px
   :font-size 20px
@@ -64,12 +63,12 @@ button
 body.searches .content, body.categories .content
   :margin-left 0
   :min-width 990px
-.text_field, #search, #search_small, .search_filters, .password_field, .text_area
+.text_field, #search, #search_small, .search_filters, .password_field, .text_area, .radio_button
   input, textarea
     :border-top 1px solid #777
     :padding 2px 5px 2px
     font-family = !sans
-    :font-weight bold
+    :font-weight normal
     color = !color1
     :font-size 13px
     :vertical-align middle		
@@ -79,12 +78,10 @@ body.searches .content, body.categories .content
       :bottom 1px solid #ddd
       :left 1px solid #ddd
     :background-color #fff
-    &:focus
-      :background-color #FFD
     &.blur  
       :color #ddd
   input
-    :height 22px
+    :height 22px   
 a
   color = !color4
   :text-decoration none
@@ -132,7 +129,7 @@ a
       &:hover
         :color #ccc
   .post_link
-    background = !color4
+    background = !color2
     :border 1px solid #000
     :color #fff
     :font-size 14px
@@ -142,10 +139,10 @@ a
     :float right
     :margin 15px 15px
     &:hover
-      background-color = !color2
+      :background #1780D1
       :color #fff
     &:active
-      :background #1780D1
+      background-color = !color4
   #register
     :float right
     :margin 11px 17px 0 0
@@ -384,31 +381,15 @@ label
     :padding 0
   legend
     :font-weight bold
-    :color #003366
+    color = !color4
   label
     :margin-right 20px
     :display inline 
     :color #000
     :font-weight normal
-
-.will_ship
-  :display none
-  :position absolute
-  :top 0
-  :left 750px
-  label
-    :display block
-    :color #999
 .submit
   :clear both
   :padding 10px 0
-
-#shipping
-  :position relative
-  
-input.price
-  :background url('/images/money.png') 5px center no-repeat
-  :padding-left 15px !important
   
 span.button
   :color #2098E5
@@ -434,7 +415,7 @@ span.button
   :clear both
   :line-height 1.4
 div.price, span.price
-  :color #54AE00
+  :color #00AA13
   :font-weight bold
   sup
     :font-weight normal
@@ -860,7 +841,7 @@ td.title
     :line-height 1.3
     :margin 4px 0 0 15px
     :font-size 14px
-#register_form
+#register_form, #listing_form
   :float left
   :margin 20px 40px 40px 40px
   :height auto
@@ -873,6 +854,63 @@ td.title
     :margin 12px 0 4px 0
   .btn_lg
     :margin 15px 10px 0 0
+#listing_form
+  :width 530px
+  label
+    :font-size 14px
+  .text_field, .text_area, .radio_button, .select
+    :margin-bottom 15px
+  #listing_title
+    :width 520px
+  #listing_description
+    :width 520px
+    :height 200px  
+    :font-weight normal
+  #listing_price, .will_ship input
+    :width 110px
+    :background url('/images/money.png') 5px center no-repeat
+    :padding-left 12px !important   
+    :color #00AA13 
+    :font-size 16px
+  .select, .price, .radio_button, .zip
+    :float left
+    :margin-right 60px  
+    legend
+      :font-size 14px
+      :margin-bottom 5px
+    label
+      :font-size 14px
+      :font-weight bold
+  .radio_button
+    :height 55px
+    :padding-top 12px
+    label
+      :font-size 12px
+  #listing_zip_code
+    :width 118px
+  #listing_category_id
+    :background-color #fff
+    :border 1px solid #ddd
+    :border-top-color #999
+    :padding 4px 3px
+    font-family = !sans
+    :font-size 13px
+  #shipping
+    :width 250px
+    :position relative
+    .will_ship
+      :display none
+      :position absolute
+      :top 0
+      :left 120px
+      label
+        :display block
+        :color #999    
+  #images
+    :float left
+    :width 530px
+  .file_field
+    :margin 0 4px 4px 0
 .messages
   :background-color #FFF296
   :font-size 12px
