--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -60,7 +60,7 @@ button
   :padding 0 8px
 .content
   :margin-left 15px
-body.searches .content, body.categories .content
+body.searches .content, body.categories .content, body.favorites .content
   :margin-left 0
   :min-width 990px
 .text_field, #search, #search_small, .search_filters, .password_field, .text_area, .radio_button
@@ -432,7 +432,9 @@ td.price
   :font-weight bold
   :text-align right
   :padding-right 15px
-
+th.price 
+  :text-align right
+  :padding-right 12px
 .flag
   :background-image url('/images/flag.png')
   :background-position 0px 2px 
@@ -706,7 +708,7 @@ td.fixed, th.fixed
   :padding-left 15px
 td.icon, th.icon
   :width 35px
-  :text-align center
+  :text-align left
   a.fav
     :background url('/images/ui.png') 0 -12px no-repeat
     :text-indent -10000px
