fix timer when messages are dynamic and no other ones are on the page.

--- a/app/views/shared/_messages.html.haml
+++ b/app/views/shared/_messages.html.haml
@@ -1,3 +1,4 @@
-%div.messages
-  - %w(failure warning notice success).each do |message_type|
-    = flash[message_type.to_sym]
+- unless flash.empty?
+  %div.messages
+    - %w(failure warning notice success).each do |message_type|
+      = flash[message_type.to_sym]
